# Diffusion360_ComfyUI

./: Diffusion360_nodes.py  Diffusion360_nodes_diffusers.py  README.md  __init__.py  demo_i2p.py  pyproject.toml  utils.py
.github/workflows/: publish.yml
img2panoimg/: image_to_360panorama_image_pipeline.py
txt2panoimg/: text_to_360panorama_image_pipeline.py
workflows/: Image2Pano_gen_image.json  Image2Pano_load_image.json  Text2Pano.json
