[project]
name = "diffusion360_comfyui"
description = "Generating seamless 360 degree panoramic image through text or perspective image."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torch", "torchvision", "torchaudio", "diffusers==0.26.0", "accelerate", "xformers", "triton", "transformers", "realesrgan==0.3.0", "py360convert", "numpy==1.23.5"]

[project.urls]
Repository = "https://github.com/ArcherFMY/Diffusion360_ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "archerfmy"
DisplayName = "Diffusion360_ComfyUI"
Icon = "assets/icon.jpeg"
